tests/NormalTests/paczka2/big_fuzzy/78049400.err
Error in line 1: 4ZaJXB S153 41,6
Error in line 7: doOWRflMDU S382 75,3
Error in line 9: doOWRflMDU S153 22,4
Error in line 17: h1pcT1058 A879 88,5
Error in line 19: AWddu S382 75,9
Error in line 35: h1pcT1058 A879 50,4
Error in line 40: 4ZaJXB A574 73,2
Error in line 46: A879 S382 85,8
Error in line 49: A879 S153 -3,9
Error in line 43: 4ZaJXB A879 385,7
Error in line 51: E2guObiyQXN A879 11,7
Error in line 45: AWddu S153 7,9
Error in line 48: A879 S153 41,9
Error in line 54: AWddu A574 79,9
Error in line 56: doOWRflMDU S153 17,4
Error in line 76: doþWRflMDU A879 83,6
Error in line 72: doOWRflMDU A879 85,3
Error in line 80: E2guObiyQXN S153 -2,9
Error in line 77: doOWRflMDU A574 38,1
Error in line 64: wjFZLsBT A879 72,9
Error in line 79: E2guObiyQXN S153 27,9
Error in line 105: A879 A879 51,8
Error in line 103: doOWRflMDU S153 245,2
Error in line 110: doOWRflMDU S382 11,0
Error in line 114: AWddu A879 84,6
Error in line 111: doOWRflMDU A879 54,8
Error in line 117: doOWRflMDU S382 21,2
Error in line 127: A879 S382 38,4
Error in line 120: h1pcT1058 A879 56,3
Error in line 135: h1pcT1058 A574 86,6
Error in line 145: wjFZLsBT S382 29,4
Error in line 156: 4ZaJXB S153 92,8
Error in line 163: AWddu A879 29,3
Error in line 183: E2guObiyQXN S382 277,9
Error in line 189: E2guObiyQXN S153 25,9
Error in line 188: AWddu S153 52,3
Error in line 191: E2guObiyQXN S382 28,0
Error in line 201: E2guObiyQXN S382 62,4
Error in line 210: E2guObiyQXN A879 59,6
Error in line 218: A879 S382 11,3
Error in line 222: A879 A574 84,7
Error in line 231: A879 A574 77,5
